@@ -2,6 +2,7 @@ Version Next
 
     - Moved XMLResultSetWriter from xml -> sql sub-package
     - Remove HardLink; obsoleted by Files.createLink()
+    - Remove unnecessary parameter to VaadinApplicationListener
       NOTE: the above are backward-incompatible changes
     - Added ExternalPropertyRegistry and related classes
     - Added StreamWriterAction
